core/unpackaged/main/default/objects/OrderDeliveryGroup/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>BLANKVALUE(DeliverToCompanyName, BLANKVALUE(DeliverToName, BLANKVALUE(DeliverToFullFirstName, BLANKVALUE(DeliverToFullLastName, 'N/A'))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>