core/unpackaged/main/default/objects/OrderDeliveryGroup/fields/ContactPointAddressId__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddressId__c</fullName>
    <label>Contact Point Address Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>