core/unpackaged/main/default/objects/OrderDeliveryGroup/fields/Ship_Option__c.field-meta.xml
<CustomField>
    <fullName>Ship_Option__c</fullName>
    <label>Ship Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>